# MORRIS-shell

./: Cargo.toml  EXAMPLES.md  README.md  core.msh  intents.txt  safety.msh  test.msh  test.txt  test_bootstrap.msh
examples/: config_manager.msh  config_manager.mshZone.Identifier  convert.msh  data_pipeine.msh  finance.msh  test.msh  test2.msh
examples/morris_test_dir/: environment.menv
src/: build_and_test.sh  main.rs  output.rs  repl.rs  test_main.rs
src/core/: builtins.rs  change_engine.rs  derive.rs  env.rs  expr.rs  filesystem.rs  history.rs  intent.rs  library.rs  library_manager.rs  mod.rs  propagate.rs  safety_guard.rs  startup_validator.rs  template.rs  types.rs
src/core/propagation/: engine.rs  graph.rs  mod.rs  types.rs
src/core/transaction/: engine.rs  mod.rs  types.rs
src/output/: data.csv  pipeline_state.menv  processed.txt
