[package]
name = "morris"
version = "1.0.0"
edition = "2021"
description = "Memory Organization & Reactive Recursive Intent-driven System"
authors = ["IronCross"]
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.0"
dirs = "5.0"
supports-color = "2.0"
rustyline = { version = "12.0", features = ["with-file-history"] }
ctrlc = "3.4"
petgraph = "0.6"

[[bin]]
name = "morris"
path = "src/main.rs"